fully working app

--- a/app/views/movies/new.html.haml
+++ b/app/views/movies/new.html.haml
@@ -12,6 +12,6 @@
   = date_select :movie, :release_date
 
   = label :movie, :director, 'Director'
-  = text_field :movie, 'Director'
+  = text_field :movie, 'director'
   
   = submit_tag 'Save Changes'
