--- a/app/views/movies/show.html.haml
+++ b/app/views/movies/show.html.haml
@@ -19,5 +19,5 @@
 
 = link_to 'Edit', edit_movie_path(@movie)
 = button_to 'Delete', movie_path(@movie), :method => :delete, :confirm => 'Are you sure?'
-%p= link_to 'Find Movies By Director', find_movies_by_director_path(@movie)
+%p= link_to 'Find Movies With Same Director', find_movies_by_director_path(@movie)
 = link_to 'Back to movie list', movies_path
